--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     const feedbackEl = document.getElementById('feedback');
     const feedbackScreen = document.getElementById('feedback-screen');
 
-    // Coloque aqui a URL do seu Google Apps Script Web App
-    const GAS_BACKEND_URL = 'https://script.google.com/macros/s/AKfycbwuJlDZJos5wcpgHFuD_PpgojWADpxkGeWt7ZeCnJvhv6pIDRYAGia7PLuJuWLT1TWQ/exec';
+    // Substitua pela URL do seu Web App do Google Apps Script
+    const GAS_BACKEND_URL = 'https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec';
 
     function startAs(mode) {
       document.getElementById('menu').style.display = 'none';
@@ -51,20 +51,16 @@
       else startScreen();
     }
 
-    // Envia o comando para o backend via POST
-    async function sendCommand(command) {
-      try {
-        await fetch(GAS_BACKEND_URL, {
-          method: 'POST',
-          body: JSON.stringify({ command }),
-          headers: { 'Content-Type': 'application/json' }
-        });
-      } catch(e) {
-        console.warn('Erro ao enviar comando:', e);
-      }
+    // Envia comando para o backend
+    function sendCommand(command) {
+      fetch(GAS_BACKEND_URL, {
+        method: 'POST',
+        body: JSON.stringify({ command }),
+        headers: { 'Content-Type': 'application/json' }
+      }).catch(e => console.error('Erro ao enviar comando:', e));
     }
 
-    // Tela fica consultando o backend a cada 500ms
+    // Tela que recebe comandos, atualizando a cada 500ms
     function startScreen() {
       setInterval(async () => {
         try {
@@ -74,14 +70,15 @@
             feedbackScreen.innerText = data.command;
           }
         } catch(e) {
-          feedbackScreen.innerText = 'Erro ao buscar comando';
+          feedbackScreen.innerText = 'Erro ao receber comando';
+          console.error(e);
         }
       }, 500);
     }
 
-    // Detecta um gesto simples: mão direita fechada ou aberta
+    // Detecta gesto simples baseado na distância entre polegar e indicador da mão direita
     function detectGesture(results) {
-      if (!results.rightHandLandmarks) return 'SEM MÃO DIREITA';
+      if (!results.rightHandLandmarks) return '';
 
       const thumbTip = results.rightHandLandmarks[4];
       const indexTip = results.rightHandLandmarks[8];
@@ -91,6 +88,7 @@
       return 'MÃO ABERTA';
     }
 
+    // Inicializa MediaPipe Holistic no controlador
     function startController() {
       const holistic = new Holistic({
         locateFile: file => `https://cdn.jsdelivr.net/npm/@mediapipe/holistic/${file}`
@@ -139,6 +137,9 @@
 
       camera.start();
     }
+
+    // Mostrar menu inicialmente
+    document.getElementById('menu').style.display = 'block';
   </script>
 </body>
 </html>
